# runlike

./: .gitignore  .travis.yml  CONTRIBUTING.md  Dockerfile  LICENSE.txt  Makefile  Pipfile  README.md  current_version.py  fixtures.sh  fixure6.json  inspect_fixtures.sh  pyproject.toml  requirements.txt  runlike.py  setup.py  test_runlike.py  upload_pypi.sh
.github/workflows/: ci.yaml  publish.yaml  release.yaml
dockerfiles/: Dockerfile  sleep.sh
runlike/: inspector.py  podman.py  runlike.py
