[tool.poetry]
name = "runlike"
version = "1.0.2"
description = "Reverse-engineer docker run command line arguments based on running containers"
authors = ["Assaf Lavie <a@assaflavie.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
pytest = "^6.2.4"
wheel = "^0.36.2"
toml = "^0.10.2"

[tool.poetry.scripts]
runlike = 'runlike.runlike:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
